ux: minor fix/tweak to inactive view mode, think logo should be visible & fixes dashboard title alignment

--- a/public/sass/components/_view_states.scss
+++ b/public/sass/components/_view_states.scss
@@ -36,10 +36,6 @@
     }
   }
 
-  .sidemenu {
-    display: none;
-  }
-
   .gf-timepicker-nav-btn {
     transform: translate3d(40px, 0, 0);
   }
